--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "express-force-ssl": "^0.3.2",
     "forever": "^2.0.0",
     "morgan": "^1.9.1",
     "node-cache": "^5.1.0",
